feat: add doom config

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -4,10 +4,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      JetBrainsMono Nerd Font
-bold_font        JetBrainsMono Nerd Font Bold
-italic_font      JetBrainsMono Nerd Font Italic
-bold_italic_font JetBrainsMono Nerd Font Bold Italic
+font_family      Fira Mono
+bold_font        Fira Mono
+italic_font      Fira Mono
+bold_italic_font Fira Mono
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -21,7 +21,7 @@ bold_italic_font JetBrainsMono Nerd Font Bold Italic
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 12
+font_size 15
 
 #: Font size (in pts)
 
@@ -47,7 +47,7 @@ adjust_line_height  110%
 
 #:     symbol_map codepoints Font Family Name
 
-disable_ligatures cursor
+# disable_ligatures cursor
 
 #: Choose how you want to handle multi-character ligatures. The
 #: default is to always render them.  You can tell kitty to not render
@@ -655,7 +655,7 @@ macos_titlebar_color background
 #: you are probably better off just hiding the titlebar with
 #: hide_window_decorations.
 
-# macos_option_as_alt no
+macos_option_as_alt both
 
 #: Use the option key as an alt key. With this set to no, kitty will
 #: use the macOS native Option+Key = unicode character behavior. This
@@ -668,7 +668,7 @@ macos_titlebar_color background
 
 #: Hide the kitty window from running tasks (Option+Tab) on macOS.
 
-# macos_quit_when_last_window_closed no
+macos_quit_when_last_window_closed no
 
 #: Have kitty quit when all the top-level windows are closed. By
 #: default, kitty will stay running, even with no open windows, as is
